# cloudcurio-monorepo-new

./: .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  SECURITY.md  create_swarm_modules.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  security.yml
agents/crewai/: README.md
agents/crews/: website_social_media_analysis_crew.py
agents/media/: server.js
agents/orchestrator/: base_agent.py  llm_utils.py  orchestrator.py  performance_agent.py  quality_agent.py  testing_agent.py
agents/specialized/: communication.py  documentation_agent.py  opencode_agent.py  refactoring_agent.py  security_agent.py
configs/global/: env.example
configs/kb/: kb_config.yaml
docs/: AGENT_DEVELOPMENT.md  API.md  CONFIGURATION.md  DOCKER_DEPLOYMENT.md  INSTALL.md  MCP_SERVERS.md  OBSERVABILITY.md  QUICKSTART.md  RUNTIME_ADAPTERS.md  SWARM_ARCHITECTURE.md  TESTING_GUIDE.md  TOOL_DEVELOPMENT.md  UPGRADE.md
kb/: index.md
kb/context/: environment.md
kb/decisions/: adr-0001-monorepo-structure.md
kb/rules/: README.md
kb/runbooks/: adding_new_agent.md  using_the_repo.md
linear/templates/: README.md  agent_task_template.md  workflow_task_template.md
mcp/: requirements.txt  wrangler.toml
mcp-servers/content-optimizer/: package.json
mcp/src/: index.js
registry/: agents.yaml  kb.yaml  tools_py.yaml  workflows.yaml
scripts/: bootstrap.sh  upgrade_existing_repo.sh
scripts/utils/: refactor-commander-to-ruru.js  refactor-ruru-to-commander.js
shell/init/: bash.sh  zsh.sh
(+45 files in other folders)
